tests/paczka1/small_fuzzy/77227013.err
Error in line 1: hzNEM0f9lQf S480 86,8
Error in line 10: S763 S43 73,0
